src/CEGUI.Native/include/CEGUI/CEGUIWidgets.h

typedef struct CEGUI_C_TreeItem_t* CEGUI_C_TreeItem;
typedef enum CEGUI_C_TabPanePosition
{
    CEGUI_C_TAB_PANE_TOP = 0,
    CEGUI_C_TAB_PANE_BOTTOM = 1
} CEGUI_C_TabPanePosition;
typedef enum CEGUI_C_GridAutoPositioning
{
    CEGUI_C_GRID_AUTO_DISABLED = 0,
    CEGUI_C_GRID_AUTO_LEFT_TO_RIGHT = 1,
    CEGUI_C_GRID_AUTO_TOP_TO_BOTTOM = 2
} CEGUI_C_GridAutoPositioning;
/* TreeItem and Tree. */
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_Create(const char* text_utf8, uint32_t id, CEGUI_C_Bool disabled, CEGUI_C_Bool auto_delete, CEGUI_C_TreeItem* out_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_Destroy(CEGUI_C_TreeItem item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_GetText(CEGUI_C_TreeItem item, const char** out_text_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_SetText(CEGUI_C_TreeItem item, const char* text_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_GetID(CEGUI_C_TreeItem item, uint32_t* out_id);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_SetID(CEGUI_C_TreeItem item, uint32_t id);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_GetUserData(CEGUI_C_TreeItem item, uintptr_t* out_data);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_SetUserData(CEGUI_C_TreeItem item, uintptr_t data);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_IsSelected(CEGUI_C_TreeItem item, CEGUI_C_Bool* out_value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_SetSelected(CEGUI_C_TreeItem item, CEGUI_C_Bool value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_IsDisabled(CEGUI_C_TreeItem item, CEGUI_C_Bool* out_value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_SetDisabled(CEGUI_C_TreeItem item, CEGUI_C_Bool value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_IsAutoDeleted(CEGUI_C_TreeItem item, CEGUI_C_Bool* out_value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_SetAutoDeleted(CEGUI_C_TreeItem item, CEGUI_C_Bool value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_IsOpen(CEGUI_C_TreeItem item, CEGUI_C_Bool* out_value);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_ToggleOpen(CEGUI_C_TreeItem item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_GetChildCount(CEGUI_C_TreeItem item, size_t* out_count);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_GetChildAt(CEGUI_C_TreeItem item, size_t index, CEGUI_C_TreeItem* out_child);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_AddChild(CEGUI_C_TreeItem item, CEGUI_C_TreeItem child);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TreeItem_RemoveChild(CEGUI_C_TreeItem item, CEGUI_C_TreeItem child);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Tree_GetSelectedCount(CEGUI_C_Window window, size_t* out_count);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Tree_GetFirstSelected(CEGUI_C_Window window, CEGUI_C_TreeItem* out_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Tree_GetNextSelected(CEGUI_C_Window window, CEGUI_C_TreeItem start_item, CEGUI_C_TreeItem* out_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Tree_AddItem(CEGUI_C_Window window, CEGUI_C_TreeItem item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Tree_InsertItem(CEGUI_C_Window window, CEGUI_C_TreeItem item, CEGUI_C_TreeItem before_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Tree_RemoveItem(CEGUI_C_Window window, CEGUI_C_TreeItem item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Tree_SetItemSelected(CEGUI_C_Window window, CEGUI_C_TreeItem item, CEGUI_C_Bool selected);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Tree_EnsureItemVisible(CEGUI_C_Window window, CEGUI_C_TreeItem item);
/* Tabs and menus. */
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TabControl_GetTabCount(CEGUI_C_Window window, size_t* out_count);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TabControl_GetSelectedIndex(CEGUI_C_Window window, size_t* out_index);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TabControl_SetSelectedIndex(CEGUI_C_Window window, size_t index);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TabControl_GetContentAt(CEGUI_C_Window window, size_t index, CEGUI_C_Window* out_content);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TabControl_AddTab(CEGUI_C_Window window, CEGUI_C_Window content);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TabControl_RemoveTabByName(CEGUI_C_Window window, const char* name_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TabControl_RemoveTabByID(CEGUI_C_Window window, uint32_t id);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TabControl_MakeVisible(CEGUI_C_Window window, size_t index);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TabControl_GetPanePosition(CEGUI_C_Window window, CEGUI_C_TabPanePosition* out_position);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_TabControl_SetPanePosition(CEGUI_C_Window window, CEGUI_C_TabPanePosition position);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MenuItem_GetPopupMenu(CEGUI_C_Window window, CEGUI_C_Window* out_popup);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MenuItem_SetPopupMenu(CEGUI_C_Window window, CEGUI_C_Window popup);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MenuItem_TogglePopupMenu(CEGUI_C_Window window, CEGUI_C_Bool* out_opened);
/* Layout containers. */
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_SequentialLayout_GetPosition(CEGUI_C_Window window, CEGUI_C_Window child, size_t* out_position);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_SequentialLayout_GetChildAt(CEGUI_C_Window window, size_t position, CEGUI_C_Window* out_child);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_SequentialLayout_MoveChildTo(CEGUI_C_Window window, CEGUI_C_Window child, size_t position);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_SequentialLayout_AddChildAt(CEGUI_C_Window window, CEGUI_C_Window child, size_t position);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GridLayout_SetDimensions(CEGUI_C_Window window, size_t width, size_t height);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GridLayout_GetDimensions(CEGUI_C_Window window, size_t* out_width, size_t* out_height);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GridLayout_GetAutoPositioning(CEGUI_C_Window window, CEGUI_C_GridAutoPositioning* out_mode);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GridLayout_SetAutoPositioning(CEGUI_C_Window window, CEGUI_C_GridAutoPositioning mode);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GridLayout_GetChildAt(CEGUI_C_Window window, size_t x, size_t y, CEGUI_C_Window* out_child);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GridLayout_AddChildAt(CEGUI_C_Window window, CEGUI_C_Window child, size_t x, size_t y);