managed/CEGUI.Managed/NativeMethods.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_Create(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text_utf8,
        uint id,
        int disabled,
        int auto_delete,
        out IntPtr out_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_Destroy(IntPtr item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_GetText(IntPtr item, out IntPtr out_text_utf8);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_SetText(
        IntPtr item,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text_utf8);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_GetID(IntPtr item, out uint out_id);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_SetID(IntPtr item, uint id);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_GetUserData(IntPtr item, out UIntPtr out_data);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_SetUserData(IntPtr item, UIntPtr data);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_IsSelected(IntPtr item, out int out_value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_SetSelected(IntPtr item, int value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_IsDisabled(IntPtr item, out int out_value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_SetDisabled(IntPtr item, int value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_IsAutoDeleted(IntPtr item, out int out_value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_SetAutoDeleted(IntPtr item, int value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_IsOpen(IntPtr item, out int out_value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_ToggleOpen(IntPtr item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_GetChildCount(IntPtr item, out UIntPtr out_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_GetChildAt(
        IntPtr item,
        UIntPtr index,
        out IntPtr out_child);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_AddChild(IntPtr item, IntPtr child);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TreeItem_RemoveChild(IntPtr item, IntPtr child);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Tree_GetSelectedCount(IntPtr window, out UIntPtr out_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Tree_GetFirstSelected(IntPtr window, out IntPtr out_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Tree_GetNextSelected(
        IntPtr window,
        IntPtr start_item,
        out IntPtr out_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Tree_AddItem(IntPtr window, IntPtr item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Tree_InsertItem(
        IntPtr window,
        IntPtr item,
        IntPtr before_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Tree_RemoveItem(IntPtr window, IntPtr item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Tree_SetItemSelected(
        IntPtr window,
        IntPtr item,
        int selected);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Tree_EnsureItemVisible(IntPtr window, IntPtr item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TabControl_GetTabCount(IntPtr window, out UIntPtr out_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TabControl_GetSelectedIndex(IntPtr window, out UIntPtr out_index);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TabControl_SetSelectedIndex(IntPtr window, UIntPtr index);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TabControl_GetContentAt(
        IntPtr window,
        UIntPtr index,
        out IntPtr out_content);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TabControl_AddTab(IntPtr window, IntPtr content);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TabControl_RemoveTabByName(
        IntPtr window,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name_utf8);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TabControl_RemoveTabByID(IntPtr window, uint id);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TabControl_MakeVisible(IntPtr window, UIntPtr index);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TabControl_GetPanePosition(IntPtr window, out TabPanePosition out_position);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_TabControl_SetPanePosition(IntPtr window, TabPanePosition position);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MenuItem_GetPopupMenu(IntPtr window, out IntPtr out_popup);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MenuItem_SetPopupMenu(IntPtr window, IntPtr popup);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MenuItem_TogglePopupMenu(IntPtr window, out int out_opened);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_SequentialLayout_GetPosition(
        IntPtr window,
        IntPtr child,
        out UIntPtr out_position);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_SequentialLayout_GetChildAt(
        IntPtr window,
        UIntPtr position,
        out IntPtr out_child);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_SequentialLayout_MoveChildTo(
        IntPtr window,
        IntPtr child,
        UIntPtr position);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_SequentialLayout_AddChildAt(
        IntPtr window,
        IntPtr child,
        UIntPtr position);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GridLayout_SetDimensions(
        IntPtr window,
        UIntPtr width,
        UIntPtr height);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GridLayout_GetDimensions(
        IntPtr window,
        out UIntPtr out_width,
        out UIntPtr out_height);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GridLayout_GetAutoPositioning(IntPtr window, out GridAutoPositioning out_mode);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GridLayout_SetAutoPositioning(IntPtr window, GridAutoPositioning mode);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GridLayout_GetChildAt(
        IntPtr window,
        UIntPtr x,
        UIntPtr y,
        out IntPtr out_child);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GridLayout_AddChildAt(
        IntPtr window,
        IntPtr child,
        UIntPtr x,
        UIntPtr y);
    // END GENERATED WIDGET INTEROP
}
